<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2024 XperiaLabs Project
  ~
  ~ SPDX-License-Identifier: Apache-2.0
  -->

<resources>
    <string name="app_name" translatable="true">Xperia Settings</string>
    <string name="app_summary" translatable="false">Configure device specific settings</string>

    <!-- Display Settings -->
    <string name="display_title">Display</string>
    <string name="display_settings_title">Image Quality Settings</string>
    <string name="display_settings_summary">Choose between brilliant colors or a faithful reproduction of the creator\'s intended vision to create an unforgettable visual experience</string>

    <!-- Audio Settings -->
    <string name="sound_title">Sound</string>
    <string name="audio_settings_title">Audio Settings</string>
    <string name="audio_settings_summary">Elevate your sound quality with the Dolby Sound EQ and 360 Reality Audio Upmix for a remarkable and immersive audio playback experience</string>

    <!-- Battery Settings -->
    <string name="charging_title">Battery</string>
    <string name="charger_settings_title">Charging management</string>
    <string name="charger_settings_summary">Optimize battery longevity by adjusting the maximum charging percentage and fine-tuning other charging settings</string>
    <string name="battery_monitor_title">Battery monitor</string>
    <string name="battery_monitor_summary">Live battery stats and usage since reset</string>

    <!-- CPU -->
    <string name="cpu_title">CPU</string>
    <string name="cpu_settings_title">CPU</string>
    <string name="cpu_settings_summary">Customize CPU configuration</string>

    <!-- USB Section | External Monitor -->
    <string name="usb_title">USB</string>
    <string name="usb_em_title">External Monitor</string>
    <string name="usb_em_summary">Enable the External Monitor app to customize external camera settings and utilize your Xperia\'s display as a reliable and accurate viewfinder for capturing vibrant, true-to-life colors</string>

    <!-- USB Audio Output -->
    <string name="usba_settings_title">External Audio Output</string>
    <string name="usba_settings_summary">Adjust media, in-call or the microphone\'s audio volume when outputting sound to an external device via the USB port</string>

    <!-- DSM (DualShock/Sense Manager) -->
    <string name="gaming_title">Gaming</string>
    <string name="dsm_settings_title">Wireless Controller for PS5 and PS4</string>
    <string name="dsm_settings_summary">Connect your PlayStation© controllers to your Xperia device to utilize them for gaming</string>

    <!-- Xperia Stream -->
    <string name="accui_settings_title">Xperia Stream</string>
    <string name="accui_settings_summary">The Xperia Stream provides you with enhanced display output and streaming capabilities and a fan that will help the phone dissipate heat, improving performance</string>
</resources>